<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools">
    <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_outline_search"
            android:title="@string/action_search"
            app:actionViewClass="androidx.appcompat.widget.SearchView"
            app:showAsAction="always|collapseActionView"
            tools:ignore="AlwaysShowAction"/>
    <item
            android:id="@+id/action_multiselect"
            android:icon="@drawable/ic_outline_select_all"
            android:title="@string/tap_to_select"
            app:showAsAction="always"
            tools:ignore="AlwaysShowAction"/>
    <item
            android:icon="@drawable/ic_outline_sort"
            android:title="@string/sort_by"
            app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single">
                <item
                        android:id="@+id/sort_by_name_asc"
                        android:title="@string/sort_name_asc"/>
                <item
                        android:id="@+id/sort_by_name_desc"
                        android:title="@string/sort_name_desc"/>
                <item
                        android:id="@+id/sort_by_added_time_asc"
                        android:title="@string/sort_added_time_asc"/>
                <item
                        android:id="@+id/sort_by_added_time_desc"
                        android:title="@string/sort_added_time_desc"/>
                <item
                        android:id="@+id/sort_by_install_asc"
                        android:title="@string/sort_install_asc"/>
                <item
                        android:id="@+id/sort_by_install_desc"
                        android:title="@string/sort_install_desc"/>
                <item
                        android:id="@+id/sort_by_update_asc"
                        android:title="@string/sort_update_asc"/>
                <item
                        android:id="@+id/sort_by_update_desc"
                        android:title="@string/sort_update_desc"/>
            </group>
        </menu>
    </item>
    <group android:id="@+id/group_filter_type">
        <item
                android:id="@+id/action_filter_user_apps"
                android:title="@string/filter_user_apps"
                android:checkable="true"
                app:showAsAction="never"/>
        <item
                android:id="@+id/action_filter_system_apps"
                android:title="@string/filter_system_apps"
                android:checkable="true"
                app:showAsAction="never"/>
    </group>
    <group android:id="@+id/group_freeze_current">
        <item
                android:id="@+id/action_freeze_current"
                android:title="@string/action_freeze_current"
                app:showAsAction="never"/>
        <item
                android:id="@+id/action_unfreeze_current"
                android:title="@string/action_unfreeze_current"
                app:showAsAction="never"/>
    </group>
    <group android:id="@+id/group_freeze_all">
        <item
                android:id="@+id/action_freeze_all"
                android:title="@string/action_freeze_all"
                app:showAsAction="never"/>
        <item
                android:id="@+id/action_unfreeze_all"
                android:title="@string/action_unfreeze_all"
                app:showAsAction="never"/>
        <item
                android:id="@+id/action_freeze_non_whitelisted"
                android:title="@string/action_freeze_non_whitelisted"
                app:showAsAction="never"/>
        <item
                android:id="@+id/action_show_uninstalled"
                android:title="@string/action_show_uninstalled"
                android:checkable="true"
                app:showAsAction="never"/>
    </group>
    <item
            android:title="@string/action_export_clipboard"
            app:showAsAction="never">
        <menu>
            <group>
                <item
                        android:id="@+id/action_export_current"
                        android:title="@string/action_export_current"
                        app:showAsAction="never"/>
                <item
                        android:id="@+id/action_export_all"
                        android:title="@string/action_export_all"
                        app:showAsAction="never"/>
            </group>
        </menu>
    </item>
</menu>
