<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding_large"
    android:paddingEnd="@dimen/padding_large"
    android:paddingTop="@dimen/padding_medium">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prerequisite_app_hint"
            android:inputType="text"
            android:maxLength="256" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_launch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_small"
        android:text="@string/prerequisite_launch"
        android:checked="true" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_enable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prerequisite_enable"
        android:checked="true" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_enable_bluetooth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shortcut_enable_bluetooth"
        android:checked="false" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_enable_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shortcut_enable_location"
        android:checked="false" />

</LinearLayout>
